--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 Name : Nattamon  Chaiwong <br>
 Nickname : Film <br>
 Date of birth : 27/10//2546 <br>
-Sex : Female <br>
+Gender : Female <br>
 Nationality : Thai <br>
 Blood type : O <hr>
 <h3><strong>CONTACT</strong></h3> 
